
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFSIZE ;
 int MADV_MERGEABLE ;
 int exit (int) ;
 int getpagesize () ;
 scalar_t__ madvise (void*,int ,int ) ;
 int perror (char*) ;
 scalar_t__ posix_memalign (void**,int ,int ) ;

int main(int argc, char **argv)
{
 void *ptr;
 if (posix_memalign(&ptr, getpagesize(), BUFSIZE) < 0) {
  perror("posix_memalign");
  exit(1);
 }
 if (madvise(ptr, BUFSIZE, MADV_MERGEABLE) < 0) {
  perror("madvise");
  exit(1);
 }
 *(char *)((void*)0) = 0;
 return 0;
}
